Add the Google logo

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -5,5 +5,8 @@
 </head>
 <body>
     <header><div class="header-links">About Store Gmail Images</div> [grid] <button class="sign-in">Sign In</button></header>
+    <div>
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class="logo" alt="Google wordmark logo">
+    </div>
     <input type="search" name="search-bar" class="search-bar">
 </body>
