Add header and footer menus, resolve logo and search bar allignment

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -4,9 +4,28 @@
     <link rel="stylesheet" href="google-homepage.css">
 </head>
 <body>
-    <header><div class="header-links">About Store Gmail Images</div> [grid] <button class="sign-in">Sign In</button></header>
+    <header>
+        <ul class="header-links">
+            <li>About</li>
+            <li>Store</li>
+            <li>Gmail</li>
+            <li>Images</li>
+            <li><img src="images/apps.png" alt=""></li>
+            <li><button class="sign-in">Sign In</button></li>
+        </ul>
+    </header>
     <div>
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class="logo" alt="Google wordmark logo">
     </div>
     <input type="search" name="search-bar" class="search-bar">
+<footer>
+    <ul>
+        <li>Advertising</li>
+        <li>Business</li>
+        <li>How Search Works</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>Settings</li>
+    </ul>
+</footer>
 </body>
