Add formatting to header and footer nav bars

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -5,10 +5,10 @@
 </head>
 <body>
     <header>
-        <ul class="header-links">
+        <ul>
             <li>About</li>
-            <li>Store</li>
-            <li>Gmail</li>
+            <li style="padding-right: 30%">Store</li>
+            <li style="padding-left: 35%">Gmail</li>
             <li>Images</li>
             <li><img src="images/apps.png" alt=""></li>
             <li><button class="sign-in">Sign In</button></li>
@@ -19,12 +19,16 @@
     </div>
     <input type="search" name="search-bar" class="search-bar">
 <footer>
-    <ul>
+    <ul style="display: block; justify-content: center;">
         <li>Advertising</li>
+        <li></li>
         <li>Business</li>
-        <li>How Search Works</li>
+        <li></li>
+        <li style="padding-right: 20%">How Search Works</li>
         <li>Privacy</li>
+        <li></li>
         <li>Terms</li>
+        <li></li>
         <li>Settings</li>
     </ul>
 </footer>
