Add 'Google Search' and 'I'm Feeling Lucky' buttons

--- a/google-homepage.html
+++ b/google-homepage.html
@@ -7,10 +7,14 @@
     <header>
         <ul>
             <li>About</li>
-            <li style="padding-right: 30%">Store</li>
-            <li style="padding-left: 35%">Gmail</li>
+            <li></li>
+            <li>Store</li>
+            <li style="padding-left: 60%">Gmail</li>
+            <li></li>
             <li>Images</li>
+            <li></li>
             <li><img src="images/apps.png" alt=""></li>
+            <li></li>
             <li><button class="sign-in">Sign In</button></li>
         </ul>
     </header>
@@ -18,6 +22,10 @@
     <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" class="logo" alt="Google wordmark logo">
     </div>
     <input type="search" name="search-bar" class="search-bar">
+    <div class="submit-btns">
+        <button class="submit">Google Search</button>
+        <button class="submit">I'm Feeling Lucky</button>
+    </div>
 <footer>
     <ul style="display: block; justify-content: center;">
         <li>Advertising</li>
