Add results and footer text

--- a/google-serp.html
+++ b/google-serp.html
@@ -10,10 +10,118 @@
             <input type="search" name="search-bar" id="search-bar"> 
         </header>
         <div>
-
+            <p class="ad-label">Ad</p><p class="url">https://www.riselocal.com/solutions/web-development</p>
+            <p class="title">We Put Dallas to Work. - 20 Years Development Experience</p>
+            <p class="meta">Real Time Website Updates. Improve Location Visibility. Faster Loading Websites. Publish Content and Media with Rise Local SEO OpStar Digital Marketing Solutions Team. Aesome Results. Ads That Work. Results To Brag About. Improved Map Visibility. Faster Websites.</p>
+        </div>
+        <div>
+            <p class="ad-label">Ad</p><p class="url">https://sofiaseo.com/</p>
+            <p class="title">Sofia Marketing in Fort Worth - Web Design Fort Worth</p>
+            <p class="meta">Hear From Our Clients Themselves! Get a Free Website Evaluation Today. Our Track...</p>
+        </div>
+        <div>
+            <p class="url">https://themanifest.com</p><p class="breadcrumbs"> > web-development > dallas</p>
+            <p class="title">Top 100 Web Development Companies in Dallas | July 2021</p>
+            <p class="meta">List of the Best Dallas Web Developers 1. Rightpoint Logo. Rightpoint. Tell us about your project. NEED HELP SELECTING A COMPANY? 2. Epsilon Logo 3.</p>
+        </div>
+        <div>
+            <p class="url">https://www.bigdcreative.com</p>
+            <p class="title">DFW Website Design, Dallas Web Development, Wordpress...</p>
+            <p class="meta">Big D Creative is Dallas' top Web Design & Development Agency. We build Modern Custom Sites for companies of all sizes. Full-scale digital marketing team in...</p>
+        </div>
+        <div>
+            <p class="url">https://clutch.co</p><p class="breadcrumbs"> > web-developers > dallas</p>
+            <p class="title">Top Web Developers in Dallas - 2021 Reviews | Clutch.co</p>
+            <p class="meta">List of the Top Dallas Web Development Companies &#8226 Computan &#8226 The BHW Group &#8226 Groove Jones - XR, AR, VR & Digital Solutions &#8226 Need Help Selecting a Company? &#8226 Agency</p>
+        </div>
+        <div>
+            <p class="url">https://clutch.co</p><p class="breadcrumbs"> > web-designers > dallas</p>
+            <p class="title">Top Web Designers in Dallas - 2021 Reviews | Clutch.co</p>
+            <p class="meta">Lit of the Top Dallas Web Design Companies &#8226 Agency Partner Interactive LLC &#8226 Studio Fox Design &#8226 Lovage Inc &#8226 Need Hemp Selecting A Company? </p>
+        </div>
+        <div>
+            <p class="url">https://upcity.com</p><p class="breadcrumbs"> > ... > Web Designers in Dallas</p>
+            <p class="title">Top 27 Web Designers in Dallas - July 2021 Reviews - UpCity</p>
+            <p class="meta">List of the Top Web Designers in Dallas &#8226 Thrive Internet Marketing Agency &#8226 Seota Digital Marketing &#8226 Legnd &#8226 WebFX &#8226 9thWonder &#8226 CSTMR Fintech Marketing & Design.</p>
+        </div>
+        <div>
+            <p class="url">https://www.sodapopmedia.com</p><p class="breadcrumbs"> > Services</p>
+            <p class="title">Web Development Company in Dallas, Texas | Custom Website </p>
+            <p class="meta">SodaPop is a leading website development company in Dallas/Fort Worth (DFW) TX. For proven website solutions by top web developers, call 214-390-3700.</p>
+        </div>
+        <div>
+            <p class="url">https://www.redspotdesign.com</p>
+            <p class="title">Red Spot Design: Web Design Dallas, TX | Website Design...</p>
+            <p class="meta">We are Dallas' top rated web design company. We're a team of web design and internet marketing specialists based in Dallas, Texas.</p>
+        </div>
+        <div>
+            <p class="url">https://www.dfwwebdesign.com</p>
+            <p class="title">DFW Web Design Custom Website Design Fort Worth, Dallas</p>
+            <p class="meta">DFW Web Design is a professional web site design firm specializing in custom website designs for small to medium sized businesses, churches, and...</p>
+        </div>
+        <div>
+            <p class="url">https://jsl.marketing</p>
+            <p class="title">JSL Marketing & Web Design: Dallas Web Design & Digital...</p>
+            <p class="meta">JSL Marketing is an award-winning Digital Marketing Agency in Dallas, TX. We provide web design, SEO, content marketing, & PPC in Dallas.</p>
+        </div>
+        <div>
+            <p class="url">https://www.goodfirms.co</p><p class="breadcrumbs"> > directory > city > dallas</p>
+            <p class="title">Top Web Development Companies in Dallas | GoodFirms</p>
+            <p class="meta">List of Top Web Development Companies Dallas | Top Web Developers in Dallas &#8226 Fortunesoft IT Innovations &#8226 Swenson He &#8226 Zco Corporation &#8226 Agile Infoways Pvt Ltd.</p>
+        </div>
+        <div>
+            <p class="ad-label">Ad</p><p class="url">https://www.iovista.com/</p>
+            <p class="title">Top Rated Dallas SEO Company - Long Lasting SEO Results</p>
+            <p class="meta">We Help Local Businesses Generate More Phone Calls & Website Leads. Request Your SEO Plan. Top Rated SEO Company in Dallas Since 2004. Local SEO Experts for Lead Generation.</p>
+        </div>
+        <div>
+            <p class="ad-label">Ad</p><p class="url">https://www.fetchlylabs.com/</p>
+            <p class="title">Fetchly - We're Texas Local - Development in Texas</p>
+            <p class="meta">Years of Experience Building Web & Mobile Applications for Startups and Businesses. Years of Experience Developing for Austin Startups and Small businesses. Data-Driven Projects.</p>
+        </div>
+        <div>
+            <p class="ad-label">Ad</p><p class="url">https://www.dxmediadirect.com/</p>
+            <p class="title">DX Media Direct, Dallas - Full-Service Ad Agency</p>
+            <p class="meta">Over 25 Years Of Experience Helps You Save Time And Money. 75% Off Prime Ad Spots. Get Better Ad Spots. Custom Ad Campaigns. Demand Better Results. Trusted Ad Agency. Higher Conversion Rates. Services: Radio Advertising, TV Advertising, Digital Marketing.</p>
+        </div>
+        <div>
+            <p>Related searches</p>
+            <ul>
+                <li>web development company</li>
+                <li>dallas web design agency</li>
+                <li>web design company dallas, tx</li>
+                <li>web designer in dallas, tx</li>
+                <li>website designers</li>
+                <li>website design texas</li>
+                <li>dallas web agency</li>
+                <li>agency habitat</li>
+            </ul>
+        </div>
+        <div>
+            <img src="" alt="">
+            <div>
+                <ul id="page-numbers">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                    <li>6</li>
+                    <li>7</li>
+                    <li>8</li>
+                    <li>9</li>
+                    <li>10</li>
+                </ul>
+            </div>
         </div>
         <footer>
-
+            <p><strong>Fort Worth, Texas</strong> - From your Internet address - Use precise location - Learn more</p>
+            <ul id="footer-menu">
+                <li>Help</li>
+                <li>Send Feedback</li>
+                <li>Privacy</li>
+                <li>Terms</li>
+            </ul>
         </footer>
     </body>
 </html>
