Fix footer formatting and add Search Types menu

--- a/google-serp.html
+++ b/google-serp.html
@@ -12,7 +12,21 @@
                 <li id="top-menu-list"><img src="images/settings.png" alt="settings" style="max-width: 25px; max-height: auto; padding-right: 20px;"></li>
                 <li id="top-menu-list"><img src="images/apps.png" alt="apps" style="padding-right: 20px;"></li>
                 <li id="top-menu-list"><button id="sign-in">Sign In</button></li>
-
+            </ul>
+            <br>
+            <ul class="search-types">
+                <li class="search-type-icon"><img src="images/search.png" alt=""></li>
+                <li class="search-type">All</li>
+                <li class="search-type-icon"><img src="images/news.png" alt=""></li>
+                <li class="search-type">News</li>
+                <li class="search-type-icon"><img src="images/maps.png" alt=""></li>
+                <li class="search-type">Maps</li>
+                <li class="search-type-icon"><img src="images/images.png" alt=""></li>
+                <li class="search-type">Images</li>
+                <li class="search-type-icon"><img src="images/videos.png" alt=""></li>
+                <li class="search-type">Videos</li>
+                <li class="search-type-icon"><img src="images/more.png" alt=""></li>
+                <li class="search-type">More</li>
             </ul>
         </header>
         <br>
@@ -109,7 +123,7 @@
             <img src="" alt="">
             <div>
                 <ul id="next-page">
-                    <li id="page-number">1</li>
+                    <li id="page-number" style="color: black;">1</li>
                     <li id="page-number">2</li>
                     <li id="page-number">3</li>
                     <li id="page-number">4</li>
@@ -118,13 +132,13 @@
                     <li id="page-number">7</li>
                     <li id="page-number">8</li>
                     <li id="page-number">9</li>
-                    <li id="page-number">10</li>
+                    <li id="page-number" style="padding-right: 12px;">10</li>
+                    <li id="page-number">Next</li>
                 </ul>
             </div>
         </div>
-        <div style="padding-bottom: 135px"></div>
         <footer>
-            <p style="padding-left: 15%"><strong>Fort Worth, Texas</strong> - From your Internet address - Use precise location - Learn more</p>
+            <p style="padding-left: 15%"><strong>Fort Worth, Texas</strong> - <span style="color: rgb(26,13,171);">From your Internet address - Use precise location</span> - Learn more</p>
             <ul id="footer-menu">
                 <li id="footer-li">Help</li>
                 <li></li>
