Finish styling the search types menu

--- a/google-serp.html
+++ b/google-serp.html
@@ -9,8 +9,8 @@
             <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" id="logo" alt="Google wordmark logo">
             <input type="search" name="search-bar" id="search-bar" placeholder="web development agency dfw">
             <ul class="settings-apps-sign-in">
-                <li id="top-menu-list"><img src="images/settings.png" alt="settings" style="max-width: 25px; max-height: auto; padding-right: 20px;"></li>
-                <li id="top-menu-list"><img src="images/apps.png" alt="apps" style="padding-right: 20px;"></li>
+                <li id="top-menu-list" style="vertical-align: middle;"><img src="images/settings.png" alt="settings" style="max-width: 25px; max-height: auto; padding-right: 20px;"></li>
+                <li id="top-menu-list" style="vertical-align: middle;"><img src="images/apps.png" alt="apps" style="padding-right: 20px;"></li>
                 <li id="top-menu-list"><button id="sign-in">Sign In</button></li>
             </ul>
             <br>
@@ -28,8 +28,11 @@
                 <li class="search-type-icon"><img src="images/more.png" alt=""></li>
                 <li class="search-type">More</li>
             </ul>
+            <hr id="line">
         </header>
-        <br>
+        <div id="result-count">
+            <p>About 562,000 Results (0.82 seconds)</p>
+        </div>
         <br>
         <div class="result">
             <p class="url"><strong>Ad</strong> &#8226 https://www.riselocal.com/solutions/web-development</p>
