Add styling to related searches and Google logo to next page menu

--- a/google-serp.html
+++ b/google-serp.html
@@ -110,20 +110,20 @@
             <p class="meta">Over 25 Years Of Experience Helps You Save Time And Money. 75% Off Prime Ad Spots. Get Better Ad Spots. Custom Ad Campaigns. Demand Better Results. Trusted Ad Agency. Higher Conversion Rates. Services: Radio Advertising, TV Advertising, Digital Marketing.</p>
         </div>
         <div>
-            <p>Related searches</p>
-            <ul>
-                <li>web development company</li>
-                <li>dallas web design agency</li>
-                <li>web design company dallas, tx</li>
-                <li>web designer in dallas, tx</li>
-                <li>website designers</li>
-                <li>website design texas</li>
-                <li>dallas web agency</li>
-                <li>agency habitat</li>
-            </ul>
+            <p style="font-size: 22px;">Related searches</p>
+            <div class="related-searches">
+                <div class="rs-item" id="rs-item1"><span class="rs-icon"><img src="images/search.png" alt=""></span>web development company</div>
+                <div class="rs-item" id="rs-item2"><span class="rs-icon"><img src="images/search.png" alt=""></span>dallas web design agency</div>
+                <div class="rs-item" id="rs-item3"><span class="rs-icon"><img src="images/search.png" alt=""></span>web design company dallas, tx</div>
+                <div class="rs-item" id="rs-item4"><span class="rs-icon"><img src="images/search.png" alt=""></span>web designer in dallas, tx</div>
+                <div class="rs-item" id="rs-item5"><span class="rs-icon"><img src="images/search.png" alt=""></span>website designers</div>
+                <div class="rs-item" id="rs-item6"><span class="rs-icon"><img src="images/search.png" alt=""></span>website design texas</div>
+                <div class="rs-item" id="rs-item7"><span class="rs-icon"><img src="images/search.png" alt=""></span>dallas web agency</div>
+                <div class="rs-item" id="rs-item8"><span class="rs-icon"><img src="images/search.png" alt=""></span>ft worth web design agency</div>
+            </div>
         </div>
         <div>
-            <img src="" alt="">
+            <div id="long-google"><img src="images/long-google.png" alt=""></div>
             <div>
                 <ul id="next-page">
                     <li id="page-number" style="color: black;">1</li>
